# multi-tenant-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
data/pdfs/: README.md
evals/: bench.py  golden.jsonl  metrics.py  run.py
src/multi_tenant_rag/: __init__.py  app.py  cache.py  chunking.py  citations.py  config.py  embed.py  graph.py  highlight.py  ingest.py  llm.py  persistence.py  prompts.py  retrieval.py  routing.py  streaming.py  telemetry.py  verify.py
src/multi_tenant_rag/ai/: __init__.py  catalog.py  client.py  embeddings.py  policy.py  prompts.py
src/multi_tenant_rag/rag/: __init__.py  cache.py  chunking.py  geometry.py  index.py  ingest.py  retrieval.py  verification.py
src/multi_tenant_rag/storage/: __init__.py  chainlit_schema.sql  persistence.py
src/multi_tenant_rag/ui/: __init__.py  chat.py  citations.py  pdf.py  settings.py  streaming.py
src/multi_tenant_rag/workflow/: __init__.py  graph.py  nodes.py  routing.py  state.py
